--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,14 +16,24 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       GITHUB_TOKEN:  ${{ secrets.GITHUB_TOKEN }}
+    
     steps:
+
       - uses: actions/checkout@v4
+
       - name: Install Linux deps
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1
-      - uses: jdx/mise-action@v2
-      - run: mise run ci
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install Windows deps (Lua 5.4)
+        if: matrix.os == 'windows-latest'
+        run: |
+          C:\msys64\usr\bin\bash -lc "pacman -S --noconfirm mingw-w64-x86_64-lua"
+
+      - name: Run Mise CI
+        uses: jdx/mise-action@v3
+        with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: mise run ci
