--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,5 @@ jobs:
         uses: jdx/mise-action@v3
         with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
-        run: mise run ci
+
+      - run: mise run ci
